# SCP-SeuratV5

./: .Rbuildignore  .gitignore  404.html  AGENTS.md  CLAUDE.html  CLAUDE.md  DESCRIPTION  DOCUMENTATION_ANALYSIS.md  FUNCTION_INDEX.md  LICENSE.html  NAMESPACE  README.md  REFACTORING_PLAN.md  SCP.Rproj  _pkgdown.yml  authors.html  index.html  pkgdown.yml  pyproject.toml  search.json  sitemap.xml  test_integration.R  test_palette_consolidation.R  test_pvalue_consolidation.R  test_scaledata.R
.github/workflows/: R-CMD-check-full.yaml  R-CMD-check-optimized.yaml  R-CMD-check.yaml
R/: RcppExports.R  SCP-analysis.R  SCP-app.R  SCP-cache.R  SCP-cell_annotation.R  SCP-cellqc.R  SCP-feature_annotation.R  SCP-imputation.R  SCP-plot.R  SCP-projection.R  SCP-workflow.R  Seurat-function.R  Seurat_integrate.R  data.R  example-data.R  integration-framework.R  integration-python.R  integration-utils.R  reexports.R  utils.R  validation-utils.R  zzz.R
R/fixes/: macos_scvi_fix.R
data/: ifnb_sub.rda  pancreas_sub.rda
inst/: pyproject.toml
inst/python/: SCP_analysis.py
inst/scp_python_deps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
inst/scripts/: make_example_data.R
man/: AnnotateFeatures.Rd  CellScoring.Rd  CellStatPlot.Rd  CombinePvalues.Rd  DynamicHeatmap.Rd  EnrichmentPlot.Rd  EnsureSeurat5.Rd  Env_requirements.Rd  FeatureHeatmap.Rd  FeatureStatPlot.Rd  FindExpressedMarkers.Rd  GSEAPlot.Rd  GeneConvert.Rd  GetPalette.Rd  GetSeuratVersion.Rd  IdentifySpatialDomains.Rd  Integration_SCP.Rd  IsSeurat5.Rd  LoadSpatialData.Rd  PrepareEnv.Rd  PreprocessSpatial.Rd  RecoverCounts.Rd  RemoveEnv.Rd  RunALRA.Rd  RunCSSMap.Rd  RunCellQC.Rd  RunCentralityScores.Rd  RunDEtest.Rd  RunDM.Rd  RunDimReduction.Rd  RunDoubletCalling.Rd  RunFR.Rd  RunGLMPCA.Rd  RunImputation.Rd  RunInteractionMatrix.Rd  RunKNNPredict.Rd  RunKNNSmooth.Rd  RunLargeVis.Rd  RunLigandReceptor.Rd  RunMAGIC.Rd  (+115 more)
reference/: AnnotateFeatures.html  BBKNN_integrate.html  CC_GenePrefetch.html  CSS_integrate.html  CellCorHeatmap.html  CellDensityPlot.html  CellDimPlot.html  CellDimPlot3D.html  CellScoring.html  CellStatPlot.html  ComBat_integrate.html  Conos_integrate.html  CreateDataFile.html  CreateMetaFile.html  DefaultReduction.html  DynamicHeatmap.html  DynamicPlot.html  EnrichmentPlot.html  EnsureSeurat5.html  Env_requirements.html  FeatureCorPlot.html  FeatureDimPlot.html  FeatureDimPlot3D.html  FeatureHeatmap.html  FeatureStatPlot.html  FetchH5.html  GSEAPlot.html  GeneConvert.html  GraphPlot.html  GroupHeatmap.html  Harmony_integrate.html  Integration_SCP.html  IsSeurat5.html  LIGER_integrate.html  LineagePlot.html  ListDB.html  MNN_integrate.html  PAGAPlot.html  PrepareDB.html  PrepareEnv.html  (+139 more)
src/: RcppExports.cpp
tests/: README.md  testthat.R
tests/interactive/: README.md  test_m_series_mac.R  test_python_analysis.R  test_python_environment.R  test_spatial_visium_hd.R
tests/testthat/: test-regression.R  test-utils.R  test-workflow-comprehensive.R  test_paga_scvelo_smoke.R  test_seurat_v5_basics.R  test_slingshot.R  test_spatial_plots_fallback.R
vignettes/: 01-env-setup.Rmd  02-spatial-workflows.Rmd  SCP-getting-started.Rmd  getting-started.Rmd  integration-methods.Rmd
