[project]
name = "scp-python-deps"
version = "0.7.0"
description = "Python dependencies for SCP R package"
requires-python = ">=3.10,<3.14"  # Updated: Python 3.10+ for broader compatibility, support 3.10-3.13

dependencies = [
    # Core scientific computing (Updated versions)
    "numpy>=1.26.0,<3.0.0",  # numpy 2.x is stable now
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "h5py>=3.11.0",
    "numba>=0.62.0",  # Full Python 3.12 and M-silicon support
    "anndata>=0.10.0,<0.12.0",  # 0.10.x supports Python 3.10+, 0.12+ requires Python 3.11+
    # Single-cell essentials
    "scanpy>=1.11.0",  # Latest version with Python 3.12 support
    "igraph>=0.11.9",  # CRITICAL: Changed from python-igraph (deprecated)
]

[project.optional-dependencies]
# Velocity analysis dependencies
velocity = [
    "scvelo>=0.3.3",  # Latest version
    "loompy>=3.0.0",
]

# Trajectory analysis dependencies
trajectory = [
    "scanpy>=1.9.0",
    "paga>=0.1.0",
    "phate>=1.0.0",
    "palantir>=1.4.1",  # Added latest version
    "cellrank>=2.0.7",  # Added latest version
]

# Deep learning dependencies
deeplearning = [
    "scvi-tools>=1.3.3",  # Latest version
    "torch>=2.5.0",  # Latest PyTorch with MPS improvements
]

# Apple Silicon optimizations (ENHANCED)
apple_silicon = [
    "scvi-tools[metal]>=1.3.3",  # Metal support
    "torch>=2.5.0",  # PyTorch with MPS backend
]

# Single-cell specific tools
singlecell = [
    "scikit-misc>=0.5.0",  # Updated
    "pynndescent>=0.5.13",
    "umap-learn>=0.5.6",
    "pymde>=0.1.18",
    "opentsne>=1.0.0",  # Updated
    "scanorama>=1.7.4",
    "bbknn>=1.6.0",
    "leidenalg>=0.10.2",
    "louvain>=0.8.2",
    "scrublet>=0.2.3",
    "pybind11>=2.13.0",  # Updated
]

# Machine learning
ml = [
    "xgboost>=2.1.0",
]

# All dependencies combined
all = [
    "scvelo>=0.3.3",
    "loompy>=3.0.0",
    "paga>=0.1.0",
    "phate>=1.0.0",
    "palantir>=1.4.1",
    "cellrank>=2.0.7",
    "scvi-tools>=1.3.3",
    "torch>=2.5.0",
    "scikit-misc>=0.5.0",
    "pynndescent>=0.5.13",
    "umap-learn>=0.5.6",
    "pymde>=0.1.18",
    "opentsne>=1.0.0",
    "scanorama>=1.7.4",
    "bbknn>=1.6.0",
    "leidenalg>=0.10.2",
    "louvain>=0.8.2",
    "scrublet>=0.2.3",
    "pybind11>=2.13.0",
    "xgboost>=2.1.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]  # Updated setuptools
build-backend = "setuptools.build_meta"