[project]
name = "scpnext-python-deps"
version = "0.1.0"
description = "Python dependencies for SCPNext R package"
requires-python = ">=3.10,<3.14"  # Align with inst/pyproject.toml

dependencies = [
    # Core scientific computing (Updated versions)
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "h5py>=3.11.0",
    "numba>=0.62.0",
    "anndata>=0.10.0,<0.12.0",
    # Single-cell essentials
    "scanpy>=1.11.0",
    "igraph>=0.11.9",
]

[tool.setuptools]
# Explicitly exclude R package directories to avoid setuptools confusion
packages = []
py-modules = []

[project.optional-dependencies]
# Basic - Essential single-cell tools for standard pipeline
basic = [
    # Essential single-cell tools
    "scikit-misc>=0.5.0",
    "pynndescent>=0.5.13",
    "umap-learn>=0.5.6",
    "pymde>=0.1.18",
    "opentsne>=1.0.0",
    "scanorama>=1.7.4",
    "bbknn>=1.6.0",
    "leidenalg>=0.10.2",
    "louvain>=0.8.2",
    "scrublet>=0.2.3",
    "pybind11>=2.13.0",
]

# All - Everything including velocity, trajectory, deep learning, and machine learning
all = [
    # Velocity analysis
    "scvelo>=0.3.3",
    "loompy>=3.0.0",
    # Trajectory analysis
    "phate>=1.0.0",
    "palantir>=1.4.1",
    "cellrank>=2.0.7",
    # Essential single-cell tools
    "scikit-misc>=0.5.0",
    "pynndescent>=0.5.13",
    "umap-learn>=0.5.6",
    "pymde>=0.1.18",
    "opentsne>=1.0.0",
    "scanorama>=1.7.4",
    "bbknn>=1.6.0",
    "leidenalg>=0.10.2",
    "louvain>=0.8.2",
    "scrublet>=0.2.3",
    "pybind11>=2.13.0",
    # Deep learning
    "scvi-tools>=1.3.3",
    "torch>=2.5.0",
    # Machine learning
    "xgboost>=2.1.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
